--- a/src/components/Experience/experience.css
+++ b/src/components/Experience/experience.css
@@ -222,10 +222,12 @@
 
     .timeline-header {
        transform: translateX(-50%);
+       margin-left: 50%;
     }
 
     .timeline-subheader {
         transform: translateX(-50%);
+        margin-left: 50%;
      }
 
     .timeline__empty-component, .timeline-spacer {
@@ -240,7 +242,7 @@
     .timeline__temp-line {
         display: block;
         transform: translateX(-50%);
-        height: 158rem;
+        height: 173rem;
     }
 
     .timeline__component-left {
@@ -285,6 +287,7 @@
         height: 3rem;
         border-radius: 2rem;
         margin: 3rem 0;
+        margin-left: 50%;
     }
 }
 
