--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -130,18 +130,21 @@
 
   /* X-Large devices (large desktops, 1200px and up) */
   @media (min-width: 1200px) {
+    .services__container {
+        padding: 5rem 0 8rem 0;
+    }
+
     .services__header h2 {
         font-size: 3rem;
     }
 
     .services__cards {
-        flex-direction: row;
-        gap: 3rem;
-        margin: 4rem 0;
+        flex-direction: column;
+       
     }
 
     .decoration-line {
-        width: 50%;
+        width: 30%;
     }
 
     .card__circle {
@@ -149,7 +152,41 @@
         width: 15rem;
         font-size: 7rem;
     }
-  }
+
+    .service__card-text {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+       width: 60%;
+
+    }
+
+    .service__card-text h3{
+        font-size: 2rem;
+        text-align: left;
+        margin-bottom: 1rem;
+    }
+
+    .service__card-text p {
+        margin: 0;
+        font-family: var(--font-secondary);
+        font-weight: var(--font-weight-p);
+        font-size: 1rem;
+        text-align: left;
+        line-height: 1.5rem;
+        width: 85%;
+    }
+
+    .service__card {
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        gap: 5rem;
+        border: 1px solid var(--color-white);
+        border-radius: 10rem;
+    }
+ }
+
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1400px) {
