--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -219,21 +219,31 @@
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+    .skills__container-content {
+        padding: 5rem 0;
+    }
+
     .skill-card-container {
         flex-direction: row;
         justify-content: center;
         width: 100%;
-        padding-bottom: 3rem;
+        padding: 0;
         
     }
 
     .skill-card {
-        width: 50%;
+        width: 40%;
+        height: 40%;
     }
 
     .decoration__pattern-container {
         flex-direction: column;
-        padding: 0.2rem;
+        padding: 0.2rem 0.2rem;
+    }
+
+    .decoration__pattern-container img {
+        height: 10rem;
+        padding: 1rem;
     }
 }
 
